# RustCrawler

./: .gitignore  CLAUDE.md  Cargo.toml  README-MCP.md  README.md  REQUIREMENTS.md  RustCrawler_Deep_Analysis.md  UPDATES.md  clippy.toml  medium_article.md  rust-toolchain.toml
.claude/: settings.local.json
.claude/commands/: rust-tools.md
.mcp/: config.json
src/: cli.rs  crawler.rs  lib.rs  main.rs  mcp_server.rs  robots.rs
src/mcp/: mod.rs  resources.rs  server.rs  tools.rs
